@@ -28,7 +28,7 @@ import org.apache.hadoop.fs.CommonConfigurationKeys;
 
 public class DFSConfigKeys extends CommonConfigurationKeys {
 
-  public static final String  DFS_BLOCK_SIZE_KEY = "dfs.blocksize";
+  public static final String  DFS_BLOCK_SIZE_KEY = "dfs.block.size";
   public static final long    DFS_BLOCK_SIZE_DEFAULT = 64*1024*1024;
   public static final String  DFS_REPLICATION_KEY = "dfs.replication";
   public static final short   DFS_REPLICATION_DEFAULT = 3;
